--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,103 @@
-html, body {
+body, html {
   margin: 0;
   padding: 0;
+}
+body{
+  height: 100vh;
+  background-color: #222;
+  background-image: url('../assets/images/Cover.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Roboto Mono', monospace;
+}
+header {
+  width: 100%;
+}
+.social-section{
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #48cfad;
+  min-height: 70px;
+  padding: 0 30px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.social-section ul {
+  width: 300px;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly ;
+  align-items: center;
+}
+.social-section ul li {
+  list-style: none;
+}
+.social-section a {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  text-decoration: none;
+}
+.social-section a span {
+  color: #FFF;
+}
+.social-section a span::before{
+  margin-left: 0;
+  font-size: 30px;
+}
+
+nav {
+  width: 100%;
+  padding: 30px 55px;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+nav section{
+  display: flex;
+  align-items: center;
+}
+.logo-container a{
+  display: inline-block;
+  width: 280px;
+  height: 100px;
+  background-image: url('../assets/images/Logo-blanco.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+}
+.about-container{
+  justify-content: flex-end;
+}
+.about-container a {
+  font-size: 25px;
+  color: #FFF;
+}
+
+/*MAIN SECTION*/
+main{
+  padding: 30px 0;
+}
+h1 {
+  width: 45%;
+  font-size: 40px;
+  text-align: center;
+  margin: 55px auto 30px;
+  color: #FFF;
+}
+.action{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.action a {
+  display: inline-block;
+  background-color: #48cfad;
+  padding: 15px 18px;
+  font-size: 18px;
+  font-weight: 700;
+  text-decoration: none;
+  color: #111;
 }
